--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="text1.css">
 </head>
 <body>
+<video src="视频.mp4" class="bjimg" autoplay loop muted></video>
 <h1 style="font-family: 幼圆;text-align:center;color: chocolate;background-color: aqua">这是一张<del>我的</del>帅气的图片</h1>
 <hr style="background-color : red;height: 5px;border: none"/>
 <p style="font-weight: bold;text-align: center">Picture!</p>
