--- a/src/index.html
+++ b/src/index.html
@@ -25,12 +25,12 @@
 </head>
 <body>
 
-<h1 style="font-family: 华文行楷;text-align:center;color: aqua;background-color: rebeccapurple"><del>色批</del>绅士们</h1>
+<h1 style="font-family: 华文行楷;text-align:center;color: aqua;background-color: rebeccapurple">这才是<del>猛男</del>绅士该看的东西</h1>
 <p>
-    你们要的
+    SpongeBob SquarePants
 </p>
 <hr style="background-color : red;height: 5px;border: none"/>
-<p style="font-weight: bold; font-family: 幼圆" >恶龙咆哮!嗷呜嗷呜~</p>
+<p style="font-weight: bold; font-family: 幼圆" >谁住在深海的大菠萝里？~<br>海绵宝宝！</p>
 <br/>
 <p style="text-align: center">
     <img style="text-align: center" src="images\恶龙咆哮.png" alt="山水" height="200">
